--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build:css": "tailwind build src/style.css -o public/style.css"
+    "tailwind:css": "tailwind build src/style.css -o public/style.css"
   },
   "keywords": [],
   "author": "",
